upd epta
