# internal/handlers/http/parse.go
@@ -12,49 +12,6 @@ type ParseRequest struct {
 	JsonSchema string `json:"data"`
 }
 
-// Parse
-// @Summary Parse swagger to doc and python
-// @Tags service
-// @Description Parse swagger to doc and python
-// @ModuleID 3
-// @Accept application/json
-// @Param provider query string true "Provider name"
-// @Param data body http.ParseRequest true "Request"
-// @Produce application/json
-// @Success 200 {string} string "Successfully generated python"
-// @Failure 400,401,500,503 {string} string "Error occurred"
-// @Router /parse [post]
-func (h *Handler) Parse(c *fiber.Ctx) error {
-	req := ParseRequest{}
-	err := c.BodyParser(&req)
-	if err != nil {
-		return err
-	}
-
-	swagParser := parser.NewSwaggerParser()
-	doc := swagParser.Parse([]byte(req.JsonSchema))
-	markdown := parser.DocumentToMarkdown(doc)
-
-	resp, err := http.DefaultClient.Post("http://localhost:8000/api/generate?provider="+c.Query("provider"), "text/plain", strings.NewReader(markdown))
-	if err != nil {
-		return err
-	}
-
-	body, err := io.ReadAll(resp.Body)
-	if err != nil {
-		return err
-	}
-
-	match := preRe.FindStringSubmatch(string(body))
-
-	pythonFile := match[1]
-
-	return c.JSON(fiber.Map{
-		"actions":       pythonFile,
-		"documentation": markdown,
-	})
-}
-
 // ParseFromBody
 // @Summary ParseFromBody swagger to doc and python
 // @Tags service
@@ -62,6 +19,7 @@ func (h *Handler) Parse(c *fiber.Ctx) error {
 // @ModuleID 3
 // @Accept application/json
 // @Param provider query string true "Provider name"
+// @Param description query string true "Provider description"
 // @Param data body string true "Input text data"
 // @Produce text/plain
 // @Success 200 {string} string "Successfully generated python"
@@ -72,7 +30,7 @@ func (h *Handler) ParseFromBody(c *fiber.Ctx) error {
 	doc := swagParser.Parse(c.BodyRaw())
 	markdown := parser.DocumentToMarkdown(doc)
 
-	resp, err := http.DefaultClient.Post("http://localhost:8000/api/generate?provider="+c.Query("provider"), "text/plain", strings.NewReader(markdown))
+	resp, err := http.DefaultClient.Post("http://localhost:8000/api/generate?provider="+c.Query("provider")+"&description="+c.Query("description"), "text/plain", strings.NewReader(markdown))
 	if err != nil {
 		return err
 	}
